# movil

./: .gitignore  README.md  VISION.md  debug_reloader.sh  dev_setup.sh  docker-compose.yml  pyproject.toml
agp-dashboard-web/: DEPLOYMENT.md  Dockerfile  README.md  agent.py  agent_api.py  agents.json  app.py  command_history.json  decorators.py  docker-compose.yml  empresas.json  extensions.py  forms.py  init_db.py  migrate.py  models.py  playbook_executor.py  playbooks.json  pyproject.toml  requirements.txt  test_app.py  test_babel.py  test_compress.py  utils.py
agp-dashboard-web/blueprints/: agents.py  assistant.py  contacts.py  culinary_studio.py  enterprise.py  gemini_cli.py  github.py  google_auth.py  local_execution.py  location.py  mcp.py  notifications.py  playbooks.py  projects.py  scheduler.py  settings.py  social_media.py  system.py  tasks.py  threed_lab.py  vault.py  visual_notes.py
agp-dashboard-web/clients/: sd_client.py
agp-dashboard-web/playbooks/: example_flow_control.json  playbook_schema.json  playbook_social_content.json  playbook_test.yml
agp-dashboard-web/static/: manifest.json  sw.js  swagger.json
agp-dashboard-web/templates/: 500.html  agent_command.html  agent_command_history.html  agents.html  agents_manager.html  allowed_commands_manager.html  analytics.html  ar_viewer.html  automation_logs.html  base.html  batch_agent_manager.html  chatbot.html  config_manager.html  contacts.html  create_edit_playbook.html  culinary_studio.html  dashboard.html  edit_model.html  empresa_form.html  empresas_manager.html  enterprise_agent_keys.html  gemini_cli.html  github_repos.html  kanban_tasks.html  local_execution.html  locations.html  login.html  logs_viewer.html  mcp_form.html  mcp_manager.html  playbook_editor.html  playbook_executions.html  playbook_form.html  playbook_reports_manager.html  playbooks.html  playbooks_manager.html  project_credential_form.html  project_credentials.html  project_credentials_manager.html  project_detail.html  (+27 more)
agp-dashboard-web/tests/: test_api_v1_tasks.py  test_helpers.py  test_tasks.py
agp-enterprise-agent/: README.md  allowed_commands.json  api_server.py  config.py  logic.py  main.py  models.py  pyproject.toml  test_server.py
agp-gemini-cli/: README.md  auto_updater.py  constants.py  context_memory.json  escuchar.py  file_utils.py  gemini_interface.py  main.py  mcp_runner.py  pyproject.toml  setup.sh  utils.py
agp-gemini-cli/commands/: __init__.py  code_analysis.py  git_commands.py  github_commands.py  mcp_commands.py  tools.py
agp-gemini-cli/config/: prompts.json
agp-gemini-cli/custom_tools/: live_api_streaming_example.py  mcp_server_example.py
docs/: AGENT_API_SPEC.md  (+5 more)
(+55 files in other folders)
