[project]
name = "agp-enterprise-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "alejandro",email = "noemisanalex@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.111.0,<0.112.0)",
    "uvicorn (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.0,<0.6.0"
mypy = ">=1.10.0,<2.0.0"
